<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_pending_actions_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/baseline_map_black_18dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/baseline_chat_black_18dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_domain"
            android:icon="@drawable/baseline_domain_black_18dp"
            android:title="@string/menu_domain" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_black_18dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />

    </group>
</menu>